<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/level_four_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fdu.ss.wangchen.mazeGame.GameViewLevelFourActivity">

    <include layout="@layout/buttons_pane" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/map_four" />

    <ImageView
        android:id="@+id/treasure_picture"
        android:layout_width="24dp"
        android:layout_height="25dp"
        android:layout_marginStart="218dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/treasure_image"
        android:src="@drawable/treasure" />

    <ImageView
        android:id="@+id/monster_picture"
        android:layout_width="24dp"
        android:layout_height="25dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/monster_image"
        android:src="@drawable/monster" />

    <include layout="@layout/stack_of_footprints" />

    <ImageView
        android:id="@+id/playerImage"
        android:layout_width="24dp"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/character_image"
        android:src="@drawable/project2" />
</FrameLayout>
