<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="fdu.ss.wangchen.mazeGame.SettingsActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="fdu.ss.wangchen.mazeGame.SandboxLevelPickerActivity"
        tools:showIn="@layout/activity_sandbox_level_picker">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/footprint_number_selector"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="56dp"
            android:layout_toStartOf="@+id/footprint_number_selector"
            android:background="@color/black_overlay"
            android:text="@string/footprint_length"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="85dp"
            android:text="@string/confirm"
            android:theme="@style/Base.Widget.AppCompat.Button" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView1"
            android:layout_below="@+id/footprint_number_selector"
            android:layout_marginTop="80dp"
            android:background="@color/black_overlay"
            android:text="@string/user_name"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/footprint_number_selector"
            android:layout_alignTop="@+id/textView2"
            android:backgroundTint="@color/colorPrimaryDark"
            android:inputType="text"
            android:labelFor="@+id/user_name" />

        <NumberPicker
            android:id="@+id/footprint_number_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginEnd="74dp"
            android:layout_marginTop="16dp"
            android:theme="@style/AppTheme"
            android:visibility="visible">

        </NumberPicker>
    </RelativeLayout>
</FrameLayout>
